--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -30,16 +30,12 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: "./docs"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          working-directory: "./docs"
           ruby-version: "3.3"
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
@@ -47,20 +43,20 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
-        #run: bundle exec jekyll build --baseurl "/netwatch"
-        run: bundle exec jekyll build --baseurl "/netwatch"
+        #run: bundle exec jekyll build --baseurl ""
+        run: bundle exec jekyll build --baseurl "/Tech"
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "./docs/_site/"
+          path: "./_site/"
 
   # Deployment job
   deploy:
     environment:
       name: github-pages
-      url: "./docs/_site"
+      url: "./_site"
     runs-on: ubuntu-latest
     needs: build
     steps:
